src/test/data/highlighting/unknown_sections.tz
parameter string;
storage string;
<error descr="<section> expected, got 'return'">return</error> string;
unknown string;
code {};